--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "d3": "^7.9.0",
+    "d3-dag": "^1.1.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
