--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "d3-dag": "^1.1.0",
     "element-plus": "^2.10.2",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
