--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
     "@types/d3": "^7.4.3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
